TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "133795317442464" [label="Start"];
  "133795317442464" -> "133795317447696";
  "133795317447696" [label="Code"];
  "133795317447696" -> "133795317445104";
  "133795317445104" [label="Function"];
  "133795317445104" -> "133795317437328";
  "133795317445104" -> "133795317438624";
  "133795317445104" -> "133795317442272";
  "133795317437328" [label="main IDENTIFIER"];
  "133795317438624" [label="Parameters"];
  "133795317442272" [label="Code"];
  "133795317442272" -> "133795317437616";
  "133795317442272" -> "133795317448128";
  "133795317437616" [label="Declaration"];
  "133795317437616" -> "133795317437136";
  "133795317437136" [label="f IDENTIFIER"];
  "133795317448128" [label="Assignment"];
  "133795317448128" -> "133795317446880";
  "133795317448128" -> "133795317442992";
  "133795317446880" [label="Expr"];
  "133795317446880" -> "133795317447360";
  "133795317446880" -> "133795317432624";
  "133795317447360" [label="* T__33"];
  "133795317432624" [label="Expr"];
  "133795317432624" -> "133795317444864";
  "133795317432624" -> "133795317442320";
  "133795317444864" [label="* T__33"];
  "133795317442320" [label="f IDENTIFIER"];
  "133795317442992" [label="5 INT"];
}
